--- a/index.html
+++ b/index.html
@@ -36,17 +36,11 @@
                 </tr>
                 </table>
                 <hr>
-                <h3>Other Skills</h3>
-                <table cellspacing="10">
-                <tr>
-                    <td>singing</td>
-                    <td>FL Studio</td> 
-                </tr>
-                <tr>
-                    <td>Keybord</td>
-                    <td>Violin</td>
-                </tr>
-                </table>
+    <h3>Other Skills</h3>
+    <p>Singing</p>
+    <p>Fl Studio</p>
+    <p>Keybord</p>
+    <p>Violin</p>
 
                  <hr>
         <ul>
