--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </tr>
                     <tr>
                     <td>2021</td>
-                    <td>Lead Guitaris for a Music Band {The Palylist}</td>
+                    <td>Lead Guitarist for a Music Band {The Palylist}</td>
                 </tr>
                 </table>
                 <hr>
